#591 - Refactor Arrays.asList() with too few arguments